<resources>
    <string name="app_name">Wasalny</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string-array name="lang">
        <item>Select</item>
        <item>عربي</item>
        <item>English</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NearestStation">Nearest Station</string>
    <string name="search">Search Inside Cairo &amp; Giza</string>
    <string name="nearest_station_to_your_location">Nearest Station To Your Location</string>
    <string name="nearest_station_to_your_destination">Nearest Station To Your Destination</string>
    <string name="Destination">Destination</string>
    <string name="from_station">From Station</string>
    <string name="to_station">To Station</string>
    <string name="ex_helwan">Ex: Helwan</string>
    <string name="ex_heliopolis">Ex: Heliopolis</string>
    <string name="Map">Map</string>
    <string name="Nearest_Station">Nearest Station</string>
    <string name="Check_your_Internet_Connection">Check your Internet Connection</string>
    <string name="Street_Name">Try it in English Or try to add st after the street name</string>
    <string name="Station_Name">Please Type Stations Name</string>
    <string name="From_Station">Please Type Station Name in From Station</string>
    <string name="To_Station">Please Type Station Name in To Station</string>
</resources>
