<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.peter.wasallny.ui.StationsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/metro"
        tools:context=".ui.MetroLinesFragment">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="90dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/from_station"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.449"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="90dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="bottom|center_horizontal"
            android:text="@string/to_station"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/guideline9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.449"
            app:layout_constraintStart_toStartOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/fromText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:hint="@string/ex_helwan"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textColorHint="#9e9e9e"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"
            app:layout_constraintEnd_toEndOf="@+id/guideline5"
            app:layout_constraintStart_toEndOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline7" />

        <AutoCompleteTextView
            android:id="@+id/toText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:hint="@string/ex_heliopolis"
            android:textColor="#FFFFFF"
            android:textColorHint="#9e9e9e"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="@+id/guideline5"
            app:layout_constraintStart_toEndOf="@+id/guideline4"
            app:layout_constraintTop_toTopOf="@+id/guideline9" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stationlist"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.171"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />


        <com.nightonke.boommenu.BoomMenuButton
            android:id="@+id/bmb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            app:bmb_buttonEnum="textOutsideCircle"
            app:bmb_buttonPlaceEnum="buttonPlace_sc_2_1"
            app:bmb_inFragment="true"
            app:bmb_normalColor="#303f42"
            app:bmb_piecePlaceEnum="piecePlace_dot_2_1"
            app:bmb_shadowColor="#ededed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline6"
            tools:ignore="MissingConstraints" />

        <com.ornach.nobobutton.NoboButton
            android:id="@+id/destinationButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:onClick="getstation"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="@+id/guideline3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline"
            app:nb_backgroundColor="#ce7b39"
            app:nb_borderColor="#303f42"
            app:nb_borderWidth="5dp"
            app:nb_radius="50dp"
            app:nb_text="@string/Destination"
            app:nb_textColor="#303f42"
            app:nb_textSize="18dp" />

        <TextView
            android:id="@+id/nearText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.34" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.13" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.17" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>