<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.peter.wasallny.ui.FindViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/subway"
        tools:context=".ui.FindFragment">

        <!-- TODO: Update blank fragment layout -->

        <EditText
            android:id="@+id/typedestText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="Ex: شارع عباس العقاد "
            android:inputType="textPersonName"
            android:textColor="#FFFFFF"
            android:textColorHint="#9e9e9e"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline19" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="fill_vertical"
            android:text="@string/nearest_station_to_your_location"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline17"
            app:layout_constraintEnd_toEndOf="@+id/guideline15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline16" />

        <TextView
            android:id="@+id/mylocationText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="fill_vertical"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline17"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline15"
            app:layout_constraintTop_toTopOf="@+id/guideline16" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="fill_vertical"
            android:text="@string/nearest_station_to_your_destination"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline18"
            app:layout_constraintEnd_toEndOf="@+id/guideline15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline17" />

        <TextView
            android:id="@+id/mydestText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="fill_vertical"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/guideline18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/guideline15"
            app:layout_constraintTop_toTopOf="@+id/guideline17" />

        <com.ornach.nobobutton.NoboButton
            android:id="@+id/GetButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/guideline12"
            app:layout_constraintStart_toEndOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline20"
            app:nb_backgroundColor="#ce7b39"
            app:nb_borderColor="#1b212c"
            app:nb_borderWidth="5dp"
            app:nb_radius="50dp"
            app:nb_text="@string/NearestStation"
            app:nb_textColor="#1b212c"
            app:nb_textSize="18dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/search"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toEndOf="@+id/guideline12"
            app:layout_constraintStart_toEndOf="@+id/guideline13"
            app:layout_constraintTop_toTopOf="@+id/guideline10" />

        <Spinner
            android:id="@+id/langSpinner"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:entries="@array/lang"
            android:theme="@style/mySpinnerItemStyle"
            app:layout_constraintBottom_toTopOf="@+id/guideline11"
            app:layout_constraintEnd_toEndOf="@+id/guideline15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.02" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.08" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.18" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.22" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.55" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>